--- a/home.html
+++ b/home.html
@@ -61,23 +61,44 @@
         </thead>
         <tbody>
           <tr>
-            <td>2008-2012</td>
-            <td>XYZ High School</td>
-            <td>High School Diploma</td>
+            <td>2015-2017</td>
+            <td>SMS Aga Khan School</td>
+            <td>Matriculation</td>
           </tr>
           <tr>
-            <td>2012-2016</td>
-            <td>ABC College</td>
-            <td>Bachelor's Degree in Computer Science</td>
+            <td>2017-2019</td>
+            <td>Aga Khan Higher Secondary School</td>
+            <td>Intermediate</td>
           </tr>
           <tr>
-            <td>2016-2018</td>
-            <td>DEF University</td>
-            <td>Master's Degree in Software Engineering</td>
+            <td>2019-2023</td>
+            <td>FAST-NUCES,Karachi</td>
+            <td>Bachelors of Science(Computer Science)</td>
           </tr>
         </tbody>
       </table>
     </section>
+    <section id="Certifications">
+        <h2>Certifications</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Year</th>
+              <th>Issuer</th>
+              <th>Name</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>2021</td>
+              <td>Udemy</td>
+              <td>The Complete Frontend Development Course</td>
+            </tr>
+            
+          </tbody>
+        </table>
+      </section>
+  
 
     <!-- JavaScript code -->
     <script src="script.js"></script>
