--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#education">Education</a></li>
-<!----          <li><a href="#certifications">Certifications</a></li> --->
+        <li><a href="#certifications">Certifications</a></li>
       </ul>
     </nav>
   </header>
@@ -78,7 +78,7 @@
         </tbody>
       </table>
     </section>
-    <section id="Certifications">
+    <section id="certifications">
         <h2>Certifications</h2>
         <table>
           <thead>
