changes in home

--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
             <tr>
               <td>2021</td>
               <td>Udemy</td>
-              <td>The Complete Frontend Development Course</td>
+              <td>The Comp Frontend Development Course</td>
             </tr>
             
           </tbody>
